--- a/src/Testhardo/Properties/Resources.resx
+++ b/src/Testhardo/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="Download_1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Download_1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="download_white" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\download_white.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
